--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,6 +20,8 @@
             <option value="">Select Role</option>
             <option value="donor">🍱 Food Donor</option>
             <option value="volunteer">🤝 Volunteer</option>
+            <option value="receiver">Receiver</option>
+
         </select>
 
         <input type="password" name="password" placeholder="Password" required>
