--- a/static/style.css
+++ b/static/style.css
@@ -86,3 +86,13 @@ input {
     border-radius: 8px;
     color: white;
 }
+.card {
+    width: 100%;
+    max-width: 320px;
+    margin: 15px auto;
+}
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
